--- a/src/app/components/tile/tile.component.html
+++ b/src/app/components/tile/tile.component.html
@@ -2,27 +2,54 @@
   <div class="textTile">
     <div>Number of words 18, language English</div>
   </div>
-  <div class="bodyTile">
-    <div class="rightControlBox">
-      <div class="controlWrapper">
-        <div class="selectButton" matRipple>
-          <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="3.823mm" height="3.823mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 452.3 452.3">
-           <g id="Layer_x0020_1">
-            <path class="tileFil" d="M230.88 17.57l45.54 141.1c2.29,7.08 10.71,13.04 18.16,13.03l147.64 -0.29c4.97,-0.01 8.35,11.37 4.35,14.26l-120.18 86.96c-5.68,4.12 -8.6,13.41 -6.42,20.07l46.07 140.84c1.55,4.75 -8.34,11.58 -12.38,8.63l-119.92 -87.49c-5.54,-4.05 -15.08,-3.79 -20.62,0.25l-119.9 87.46c-4.06,2.95 -13.43,-4.65 -11.86,-9.46l45.91 -140.38c2.09,-6.38 -0.21,-15.39 -5.65,-19.33l-120.77 -87.4c-4.07,-2.94 -0.58,-14.41 4.45,-14.41l147.79 0.29c7.28,0.01 15.41,-5.99 17.65,-12.92l45.57 -141.17c1.49,-4.63 13.09,-4.62 14.57,-0.04z"/>
-           </g>
-          </svg>
+  <div class="tp-wrapper">
+    <div class="boxWrapper"  [@flipState]="flip">
+      <div class="bodyTile tp-box__front">
+        <div class="rightControlBox">
+          <div class="controlWrapper">
+            <div class="selectButton" matRipple>
+              <svg class="selectSvg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="3.823mm" height="3.823mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 452.3 452.3">
+               <g id="Layer_x0020_1">
+                <path class="tileFil selectPath" d="M230.88 17.57l45.54 141.1c2.29,7.08 10.71,13.04 18.16,13.03l147.64 -0.29c4.97,-0.01 8.35,11.37 4.35,14.26l-120.18 86.96c-5.68,4.12 -8.6,13.41 -6.42,20.07l46.07 140.84c1.55,4.75 -8.34,11.58 -12.38,8.63l-119.92 -87.49c-5.54,-4.05 -15.08,-3.79 -20.62,0.25l-119.9 87.46c-4.06,2.95 -13.43,-4.65 -11.86,-9.46l45.91 -140.38c2.09,-6.38 -0.21,-15.39 -5.65,-19.33l-120.77 -87.4c-4.07,-2.94 -0.58,-14.41 4.45,-14.41l147.79 0.29c7.28,0.01 15.41,-5.99 17.65,-12.92l45.57 -141.17c1.49,-4.63 13.09,-4.62 14.57,-0.04z"/>
+               </g>
+              </svg>
+            </div>
+            <div class="removeButton" matRipple>
+              <svg class="removeSvg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="3.823mm" height="3.823mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 452.3 452.3">
+               <g id="Layer_x0020_2">
+                <path class="tileFil removePath" d="M256.29 51.61l121.05 -0.01c13.38,0 24.32,10.95 24.32,24.33 0,13.37 -10.94,24.32 -24.32,24.32l-307.28 0c-13.37,0 -24.32,-10.95 -24.32,-24.32 0,-13.38 10.95,-24.33 24.32,-24.33l121.05 0c-9.33,-1.41 -16.54,-9.51 -16.54,-19.22l0 -9.75c0,-10.7 8.75,-19.45 19.45,-19.45l59.37 0c10.69,0 19.44,8.75 19.44,19.45l0 9.75c0,9.71 -7.21,17.81 -16.54,19.23zm-170.75 79.87l276.32 0c8.19,0 14.89,6.7 14.89,14.89l0 261.25c0,25.52 -20.88,46.4 -46.4,46.4l-213.3 0c-25.52,0 -46.4,-20.88 -46.4,-46.4l0 -261.25c0,-8.19 6.7,-14.89 14.89,-14.89zm54.66 47.41l0 0c13.28,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.88,24.16 -24.16,24.16l0 0c-13.29,0 -24.17,-10.87 -24.17,-24.16l0 -162.28c0,-13.29 10.88,-24.16 24.17,-24.16zm83.5 0l0 0c13.29,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.87,24.16 -24.16,24.16l0 0c-13.29,0 -24.16,-10.87 -24.16,-24.16l0 -162.28c0,-13.29 10.87,-24.16 24.16,-24.16zm83.51 0l0 0c13.29,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.87,24.16 -24.16,24.16l0 0c-13.29,0 -24.16,-10.87 -24.16,-24.16l0 -162.28c0,-13.29 10.87,-24.16 24.16,-24.16z"/>
+               </g>
+              </svg>
+            </div>
+          </div>
         </div>
-        <div class="removeButton" matRipple>
-          <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="3.823mm" height="3.823mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 452.3 452.3">
-           <g id="Layer_x0020_2">
-            <path class="tileFil" d="M256.29 51.61l121.05 -0.01c13.38,0 24.32,10.95 24.32,24.33 0,13.37 -10.94,24.32 -24.32,24.32l-307.28 0c-13.37,0 -24.32,-10.95 -24.32,-24.32 0,-13.38 10.95,-24.33 24.32,-24.33l121.05 0c-9.33,-1.41 -16.54,-9.51 -16.54,-19.22l0 -9.75c0,-10.7 8.75,-19.45 19.45,-19.45l59.37 0c10.69,0 19.44,8.75 19.44,19.45l0 9.75c0,9.71 -7.21,17.81 -16.54,19.23zm-170.75 79.87l276.32 0c8.19,0 14.89,6.7 14.89,14.89l0 261.25c0,25.52 -20.88,46.4 -46.4,46.4l-213.3 0c-25.52,0 -46.4,-20.88 -46.4,-46.4l0 -261.25c0,-8.19 6.7,-14.89 14.89,-14.89zm54.66 47.41l0 0c13.28,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.88,24.16 -24.16,24.16l0 0c-13.29,0 -24.17,-10.87 -24.17,-24.16l0 -162.28c0,-13.29 10.88,-24.16 24.17,-24.16zm83.5 0l0 0c13.29,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.87,24.16 -24.16,24.16l0 0c-13.29,0 -24.16,-10.87 -24.16,-24.16l0 -162.28c0,-13.29 10.87,-24.16 24.16,-24.16zm83.51 0l0 0c13.29,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.87,24.16 -24.16,24.16l0 0c-13.29,0 -24.16,-10.87 -24.16,-24.16l0 -162.28c0,-13.29 10.87,-24.16 24.16,-24.16z"/>
-           </g>
-          </svg>
+        <div class="bodyText" (click)="toggleFlip($event)">
+          word
         </div>
       </div>
-    </div>
-    <div class="bodyText">
-      word
+      <div class="bodyTile tp-box__back">
+        <div class="rightControlBox">
+          <div class="controlWrapper">
+            <div class="selectButton" matRipple>
+              <svg class="selectSvg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="3.823mm" height="3.823mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 452.3 452.3">
+               <g id="Layer_x0020_1">
+                <path class="tileFil selectPath" d="M230.88 17.57l45.54 141.1c2.29,7.08 10.71,13.04 18.16,13.03l147.64 -0.29c4.97,-0.01 8.35,11.37 4.35,14.26l-120.18 86.96c-5.68,4.12 -8.6,13.41 -6.42,20.07l46.07 140.84c1.55,4.75 -8.34,11.58 -12.38,8.63l-119.92 -87.49c-5.54,-4.05 -15.08,-3.79 -20.62,0.25l-119.9 87.46c-4.06,2.95 -13.43,-4.65 -11.86,-9.46l45.91 -140.38c2.09,-6.38 -0.21,-15.39 -5.65,-19.33l-120.77 -87.4c-4.07,-2.94 -0.58,-14.41 4.45,-14.41l147.79 0.29c7.28,0.01 15.41,-5.99 17.65,-12.92l45.57 -141.17c1.49,-4.63 13.09,-4.62 14.57,-0.04z"/>
+               </g>
+              </svg>
+            </div>
+            <div class="removeButton" matRipple>
+              <svg class="removeSvg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="3.823mm" height="3.823mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" viewBox="0 0 452.3 452.3">
+               <g id="Layer_x0020_2">
+                <path class="tileFil removePath" d="M256.29 51.61l121.05 -0.01c13.38,0 24.32,10.95 24.32,24.33 0,13.37 -10.94,24.32 -24.32,24.32l-307.28 0c-13.37,0 -24.32,-10.95 -24.32,-24.32 0,-13.38 10.95,-24.33 24.32,-24.33l121.05 0c-9.33,-1.41 -16.54,-9.51 -16.54,-19.22l0 -9.75c0,-10.7 8.75,-19.45 19.45,-19.45l59.37 0c10.69,0 19.44,8.75 19.44,19.45l0 9.75c0,9.71 -7.21,17.81 -16.54,19.23zm-170.75 79.87l276.32 0c8.19,0 14.89,6.7 14.89,14.89l0 261.25c0,25.52 -20.88,46.4 -46.4,46.4l-213.3 0c-25.52,0 -46.4,-20.88 -46.4,-46.4l0 -261.25c0,-8.19 6.7,-14.89 14.89,-14.89zm54.66 47.41l0 0c13.28,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.88,24.16 -24.16,24.16l0 0c-13.29,0 -24.17,-10.87 -24.17,-24.16l0 -162.28c0,-13.29 10.88,-24.16 24.17,-24.16zm83.5 0l0 0c13.29,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.87,24.16 -24.16,24.16l0 0c-13.29,0 -24.16,-10.87 -24.16,-24.16l0 -162.28c0,-13.29 10.87,-24.16 24.16,-24.16zm83.51 0l0 0c13.29,0 24.16,10.87 24.16,24.16l0 162.28c0,13.29 -10.87,24.16 -24.16,24.16l0 0c-13.29,0 -24.16,-10.87 -24.16,-24.16l0 -162.28c0,-13.29 10.87,-24.16 24.16,-24.16z"/>
+               </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="bodyText" (click)="toggleFlip($event)">
+          слово
+        </div>
+      </div>
     </div>
   </div>
   <div class="paginator">
